# vulnpredict

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  action.yml  entrypoint.sh  labeled_findings.csv  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_negative_report.md  false_positive_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml  version-check.yml
demo_project/: README.md  vuln_extended.py  vuln_js.js  vuln_python.py
docs/: announcement.md  baseline-scanning.md  changelog.md  getting-started.md  index.md  pre-commit.md  rule-authoring.md  self-audit.md
docs/api/: dashboard.md  python.md
docs/contributing/: architecture.md  setup.md
docs/examples/: github-action-usage.yml
docs/getting-started/: installation.md  quickstart.md  tutorial.md
docs/guide/: baseline.md  configuration.md  output-formats.md  profiles.md  scanning.md
rules/: javascript-dangerous-calls.yml  python-crypto-xxe.yml  python-dangerous-calls.yml  python-deserialization.yml  python-ssrf.yml
src/vulnpredict/: __init__.py  benchmark.py  cli.py  embeddings.py  go_analyzer.py  interprocedural_taint.py  js_analyzer.py  perf_benchmark.py  profiles.py  py_analyzer.py  rules.py  suppression.py  training_pipeline.py  types.py
src/vulnpredict/dashboard/: __init__.py  app.py  models.py
src/vulnpredict/formatters/: json_fmt.py  sarif.py
tests/: conftest.py  test_baseline.py  test_benchmark.py  test_cli.py  test_config.py  test_dashboard_api.py  test_data_ingest.py  test_embeddings.py  test_error_handling.py  test_extended_py_analyzer.py  test_go_analyzer.py  test_html_formatter.py  test_iac_analyzer.py  test_interprocedural_taint.py  test_js_analyzer.py  test_js_security_patterns.py  test_json_formatter.py  test_markdown_formatter.py  test_ml.py  test_pattern_extract.py  test_perf_benchmark.py  test_placeholder.py  test_profiles.py  test_py_analyzer.py  test_rules.py  test_sarif_formatter.py  test_secrets_detector.py  test_severity.py  test_suppression.py  test_taint_analysis.py  test_training_pipeline.py  test_ts_analyzer.py  test_vuln_db.py
tests/fixtures/: nvd_sample.json  secure.go  vulnerable.go
tests/fixtures/javascript/: complex_function.js  package.json  safe_code.js  syntax_error.js  vulnerable_dom_xss.js  vulnerable_eval.js
tests/fixtures/python/: class_with_methods.py  complex_function.py  mock_requirements.txt  safe_eval.py  safe_no_secrets.py  vulnerable_eval.py  vulnerable_secrets.py  vulnerable_sql.py  vulnerable_subprocess.py  vulnerable_taint.py
tests/fixtures/python/extended/: safe_deserialization.py  vuln_deserialization.py  vuln_ldap_injection.py  vuln_open_redirect.py  vuln_path_traversal.py  vuln_ssrf.py  vuln_template_injection.py  vuln_weak_crypto.py  vuln_xxe.py
tests/fixtures/suppression/: .vulnpredictignore  .vulnpredictignore_comments  baseline.json  case_insensitive.py  ignore.js  ignore_line.py  ignore_rule.py  no_findings.json
tests/fixtures/taint/: aliasing.py  interprocedural_flow.py  multi_hop_flow.py  multiple_sources.py  request_to_sql.py  safe_interprocedural.py  safe_no_taint.py  sanitized_input.py  source_to_sink.py  variable_reassignment.py
vulnpredict/: __init__.py  __main__.py  cli.py  config.py  data_ingest.py  generate_labeled_data.py  iac_analyzer.py  interprocedural_taint.py  js_analyzer.py  js_security_patterns.py  logging_config.py  ml.py  pattern_extract.py  py_analyzer.py  rules.py  secrets_detector.py  severity.py  suppression.py  train.py  ts_analyzer.py  vuln_db.py
vulnpredict/formatters/: html.py  json_fmt.py  markdown.py  sarif.py
