# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata (PEP 621)
# ---------------------------------------------------------------------------
[project]
name = "vulnpredict"
version = "0.2.0-dev"
description = "Predictive Vulnerability Intelligence Tool — static analysis and ML-powered vulnerability detection"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "VulnPredict Contributors"},
]
keywords = [
    "security",
    "vulnerability",
    "static-analysis",
    "sast",
    "machine-learning",
    "taint-analysis",
    "code-scanning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

# Core dependencies — required for basic scanning
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "joblib>=1.2",
    "astroid>=2.15",
    "bandit>=1.7",
]

[project.optional-dependencies]
# ML extras — for CodeBERT embeddings and advanced scoring
ml = [
    "torch>=2.0",
    "transformers>=4.30",
]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "pre-commit>=3.0",
    "mypy>=1.0",
    "detect-secrets>=1.4",
]
# Dashboard extras
dashboard = [
    "fastapi>=0.100",
    "uvicorn>=0.22",
]
# All optional dependencies (expanded to avoid self-reference)
all = [
    "torch>=2.0",
    "transformers>=4.30",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "pre-commit>=3.0",
    "mypy>=1.0",
    "detect-secrets>=1.4",
    "fastapi>=0.100",
    "uvicorn>=0.22",
]

[project.urls]
Repository = "https://github.com/thehhugg/vulnpredict"
Issues = "https://github.com/thehhugg/vulnpredict/issues"
Changelog = "https://github.com/thehhugg/vulnpredict/blob/master/CHANGELOG.md"

[project.scripts]
vulnpredict = "vulnpredict.cli:main"

# ---------------------------------------------------------------------------
# Setuptools — package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["vulnpredict*"]
exclude = ["tests*", "demo_project*", "docs*"]

# ---------------------------------------------------------------------------
# Black — code formatting
# ---------------------------------------------------------------------------
[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]

# ---------------------------------------------------------------------------
# isort — import sorting (black-compatible)
# ---------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["vulnpredict"]

# ---------------------------------------------------------------------------
# Bandit — security linting
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "demo_project"]
skips = ["B101", "B110", "B112", "B404", "B603", "B607"]

# ---------------------------------------------------------------------------
# Coverage — pytest-cov configuration
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["vulnpredict"]
omit = [
    "vulnpredict/__main__.py",
    "vulnpredict/train.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
]
show_missing = true
fail_under = 40
precision = 1

[tool.coverage.xml]
output = "coverage.xml"

# ---------------------------------------------------------------------------
# pytest — test configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=vulnpredict --cov-report=term-missing --cov-report=xml:coverage.xml"
